--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </a>   
               </li>
               <li class="menu-item">
-                <a class="Frame-16" href="#Hotel-search-link">
+                <a class="Frame-16" href="catalog.html">
                   <h4>
                     Гостиницы
                   </h4>
